--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ getting_started/coleridgeinitiative-show-us-the-data/
 getting_started/coleridgeinitiative-show-us-the-data.zip
 getting_started/articles_df.pkl
 *.pkl
+Preprocessing/.ipynb_checkpoints/
